[tool.poetry]
name = "my-dost"
version = "0.1.0"
readme = "README.md"
packages = [{include = "my_dost"}]
description = "My-DOST is a Python based Utility platform as an Open Source project. We strive to liberate humans from mundane, repetitive tasks, giving them more time to use their intellect and creativity to solve higher-order business challenges and perform knowledge work."
authors = ["PyBots <support@pybots.ai>"]
license = "MIT"
homepage = ""
repository = ""
documentation = "https://auto-pylot.readthedocs.io/"
keywords = ["PyBots","dost","my-dost","utility","Python","Automation", "Software BOT","Dost", "bots", "RPA"]
classifiers = [
    'Development Status :: 1 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Financial and Insurance Industry',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'Topic :: Software Development :: Build Tools',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: Microsoft :: Windows',
    'Programming Language :: Python',
]

[tool.poetry.dependencies]
python = ">=3.8.0,<=3.10.40"
typeguard = "^2.13.3"
PyScreeze = "^0.1.28"
pywinauto = "^0.6.8"
Pillow = "^9.2.0"
PyPDF2 = "^2.11.0"
pyttsx3 = "^2.90"
pandas = "^1.5.0"
openpyxl = "^3.0.10"
xls2xlsx = "^0.1.5"
xlsx2html = "^0.4.0"
xlwt = "^1.3.0"
pygetwindow = "^0.0.9"
pytesseract = "^0.3.10"
yagmail = "^0.15.293"


[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
mkdocs-material = "^8.4.2"
mkdocstrings-python = "^0.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
